# hex-buffer-serde

./: .clippy.toml  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: ci.yml  gh-pages.yml  rust.yml
examples/: ed25519.rs  ed25519_dalek.rs
hex_buffer_serde/: all.html  index.html  sidebar-items.js  struct.ConstHexForm.html  struct.HexForm.html  trait.ConstHex.html  trait.Hex.html
hex_buffer_serde/const_len/: struct.ConstHexForm.html  trait.ConstHex.html
hex_buffer_serde/var_len/: struct.HexForm.html  trait.Hex.html
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/hex_buffer_serde/: trait.Hex.js
implementors/hex_buffer_serde/var_len/: trait.Hex.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
search.desc/hex_buffer_serde/: hex_buffer_serde-desc-0-.js
src/: const_len.rs  lib.rs  var_len.rs
src/hex_buffer_serde/: const_len.rs.html  lib.rs.html  var_len.rs.html
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/hex_buffer_serde/var_len/: trait.Hex.js
wasm/: Cargo.toml  README.md  test.js
wasm/src/: lib.rs
