[package]
name = "hex-buffer-serde"
version = "0.3.0"
edition = "2018"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["serde", "hex", "encoding", "bytes"]
categories = ["encoding", "parsing", "no-std"]
description = "Helper for serializing byte buffers as hex strings in `serde`"
repository = "https://github.com/slowli/hex-buffer-serde"
documentation = "https://docs.rs/hex-buffer-serde/"

[package.metadata.docs.rs]
all-features = true
# Set `docsrs` to enable unstable `doc(cfg(...))` attributes.
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Public dependencies (present in the public API).
serde = { version = "1.0", default-features = false }

# Private dependencies (not exposed in the public API).
hex = { version = "0.4.3", default-features = false }

[dev-dependencies]
serde_derive = "1.0"
serde_json = "1.0"
serde_cbor = "0.11.1"
bincode = "1.3.1"
doc-comment = "0.3.3"
ed25519-compact = "2.0.2"
version-sync = "0.9.1"

[[example]]
name = "ed25519"
path = "examples/ed25519.rs"
required-features = ["alloc"]

[features]
default = ["alloc"]
# Enables types that depend on the `alloc` crate: `Hex` and `HexForm`.
alloc = ["hex/alloc"]
# Enables types that depend on const generics: `ConstHex` and `ConstHexForm`.
# Requires Rust 1.51 or newer.
const_len = []

[workspace]
members = [".", "wasm"]
