[package]
name = "hex-buffer-serde-wasm"
version = "0.0.0"
publish = false
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Testing usability of pwbox in WASM"
repository = "https://github.com/exonum/pwbox-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hex-buffer-serde = { path = "..", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
# WASM glue
wasm-bindgen = { version = "0.2.50", features = ["serde-serialize"] }
