[package]
name = "hex-buffer-serde-wasm"
version = "0.0.0"
publish = false
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Testing usability of hex-buffer-serde in WASM"
repository = "https://github.com/slowli/hex-buffer-serde"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hex-buffer-serde = { path = ".." }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
# WASM glue
wasm-bindgen = "0.2.94"
